--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,17 +1,17 @@
-<link rel="stylesheet" href="style2.css">
+<link rel="stylesheet" href="/style2.css">
 <div class="login-box">
-    <h2>Create Task</h2>
-    <form method="post" action="/tasks">
+    <h2>Edit Task</h2>
+    <form method="put" action="/tasks/{{_id}}">
       <div class="user-box">
-        <input type="text" name="title" required="">
+        <input type="text" name="" required="">
         <label>Title</label>
       </div>
       <div class="user-box">
-        <input type="text" name="description" required="">
+        <input type="text" name="" required="">
         <label>Description</label>
        </div>
         <div class="user-box">
-        <input type="text" name="dueDate" required="">
+        <input type="text" name="" required="">
         <label>Date</label>
       </div>
       <input type="submit" value="Submit">
