--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,15 +3,15 @@
     <h2>Create Task</h2>
     <form method="post" action="/tasks">
       <div class="user-box">
-        <input type="text" name="title" required="">
+        <input type="text" name="title" >
         <label>Title</label>
       </div>
       <div class="user-box">
-        <input type="text" name="description" required="">
+        <input type="text" name="description" >
         <label>Description</label>
        </div>
         <div class="user-box">
-        <input type="text" name="dueDate" required="">
+        <input type="text" name="dueDate" >
         <label>Date</label>
       </div>
       <input type="submit" value="Submit">
