--- a/views/task.hbs
+++ b/views/task.hbs
@@ -45,9 +45,15 @@
                             <i class="fas fa-edit"></i>Edit
                         </button>
                         </a>
+                        <a href="/task/{{_id}}">
                         <button type="button" class="delete__button" onclick="handleDelete('{{_id}}')">
                             <i class="fas fa-trash-alt"></i>Delete
                         </button>
+                        </a>
+                    
+
+                        
+                        
                     </div>                
                 <i class="fas fa-trash-alt item__trash-can"></i>
             </li>
