--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -19,11 +19,13 @@
     </form>
   </div>
   -->
-
+ 
  <link rel="stylesheet" href="/style2.css">
 <div class="login-box">
     <h2>Edit Task</h2>
-    <form id="editTaskForm" method="POST" action="/tasks/{{_id}}">
+    
+    <form id="editTaskForm" method="POST"  action="/tasks/{{_id}}  " >
+    
       <div class="user-box">
         <input type="text" name="title" required="">
         <label>Title</label>
@@ -38,31 +40,46 @@
       </div>
       <input type="submit" value="Submit">
     </form>
+    
 </div>
 
+
+{{#each tasks}}
 <script>
-document.getElementById("editTaskForm").addEventListener("submit", function(event) {
-    event.preventDefault(); // Prevent default form submission
 
-    var formData = new FormData(this); // Get form data
+document.getElementById("editTaskForm").addEventListener("submit", async function(event) {
+    event.preventDefault(); 
+    
+    var formData = new FormData(this); 
+    var taskId = "{{_id}}";
 
-    fetch('/tasks/' + _id, {
-        method: 'PUT',
-        body: formData
-    })
-    .then(response => {
+    try {
+        const response = await fetch('/tasks/' + taskId, {
+            method: 'PUT',
+            headers: {
+                'Content-Type': 'application/json' 
+            },
+            body: JSON.stringify(Object.fromEntries(formData)) 
+        });
+
         if (!response.ok) {
             throw new Error('Network response was not ok');
         }
-        // If response is ok, redirect or handle success accordingly
-        // For example, you could redirect the user to another page
+
         window.location.href = '/tasks'; // Redirect to tasks page
-    })
-    .catch(error => {
+    } catch (error) {
         console.error('Error:', error);
-        // Handle error accordingly, such as showing an error message to the user
         alert('Error updating task. Please try again.');
-    });
+    }
 });
 </script>
+{{/each}}
+
+ 
+
+
+
+
+
+
 
